--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+chart-studio==1.1.0
+ipywidgets==7.5.1
 matplotlib==3.2.2
 numpy==1.19.2
 pandas==1.1.2
 plotly==4.13.0
 seaborn==0.11.0
+statsmodels==0.12.1
