--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-# Created by https://www.gitignore.io/api/python,pycharm,jupyternotebooks,visualstudiocode,virtualenv
-# Edit at https://www.gitignore.io/?templates=python,pycharm,jupyternotebooks,visualstudiocode,virtualenv
+# Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,intellij,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks,intellij,visualstudiocode
+
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# IntelliJ
+**/.idea/
+**/.idea_modules/
+**/out/
+
+# CMake
+cmake-build-*/
+
+# File-based project format
+*.iml
+*.iws
+*.ipr
+modules.xml
 
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
@@ -14,24 +32,6 @@ ipython_config.py
 
 # Remove previous ipynb_checkpoints
 #   git rm -r .ipynb_checkpoints/
-
-### PyCharm ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-# IntelliJ
-**/.idea/
-**/.idea_modules/
-**/out/
-
-## File-based project format:
-*.iml
-*.iws
-*.ipr
-modules.xml
-
-# CMake
-cmake-build-*/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -56,7 +56,6 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -83,33 +82,23 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
 .pytest_cache/
+cover/
 
 # Translations
 *.mo
 *.pot
 
-# Sphinx documentation
-docs/_build/
-
-### Virtual Environments
-
-# Virtualenv
-# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
-.Python
-pyvenv.cfg
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-pip-selfcheck.json
+# PyBuilder
+.pybuilder/
+target/
 
 # pyenv
-!.python-version
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -118,8 +107,70 @@ pip-selfcheck.json
 #   install all needed dependencies.
 #Pipfile.lock
 
+# poetry
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+#   This is especially recommended for binary packages to ensure reproducibility, and is more
+#   commonly ignored for libraries.
+#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+#poetry.lock
+
+# pdm
+#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+#pdm.lock
+#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   in version control.
+#   https://pdm.fming.dev/#use-with-ide
+.pdm.toml
+.pdm-python
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
 # Pyre type checker
 .pyre/
+
+# pytype static type analyzer
+.pytype/
+
+
+# PyCharm
+#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
+#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+#  and can be added to the global gitignore or merged into this file.  For a more nuclear
+#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+#.idea/
+
+### Python Patch ###
+# Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
+poetry.toml
+
+# ruff
+.ruff_cache/
+
+# LSP config files
+pyrightconfig.json
+
 
 ### VisualStudioCode ###
 .vscode/*
@@ -127,9 +178,24 @@ pip-selfcheck.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
+.ionide
 
-# End of https://www.gitignore.io/api/python,pycharm,jupyternotebooks,visualstudiocode,virtualenv
+### Developer Workstation ###
+# Docker volumes
+**/volumes/**
+
+# macOS
+**/.DS_Store
+
+# End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,intellij,visualstudiocode
