--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "numpy>=1.26.2",
     "seaborn>=0.13.0",
     "plotly>=5.18.0",
+    "statsmodels>=0.14.0",
     "streamlit>=1.28.2",
 ]
 
