--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,24 +8,23 @@ authors = [
     {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
 ]
 
-requires-python = ">=3.10,<3.12"
+requires-python = ">=3.10,<3.13"
 
 dependencies = [
-    "pandas>=2.1.3",
-    "numpy>=1.26.2",
-    "seaborn>=0.13.0",
-    "plotly>=5.18.0",
-    "statsmodels>=0.14.0",
-    "streamlit>=1.28.2",
+    "pandas>=2.2.3,<3.0",
+    "numpy>=2.1.3,<3.0",
+    "seaborn>=0.13.2,<1.0",
+    "plotly>=5.24.1,<6.0",
+    "statsmodels>=0.14.4,<1.0",
+    "streamlit>=1.40.1,<2.0",
 ]
 
-[tool.pdm.dev-dependencies]
+[dependency-groups]
 dev = [
-    "jupyterlab>=4.0.9",
-    "streamlit-jupyter>=0.2.1",
-    "ruff>=0.1.6",
+    "jupyterlab>=4.3.0",
+    "ruff>=0.7.3"
 ]
 
 [tool.ruff]
 line-length = 100
-
+lint.select = ["F", "E", "W", "I001"]
