--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,23 @@
 [project]
-name = ""
+name = "kaggle-data-vis"
 version = "1.0"
 description = "Kaggle - Learn Data Visualization (https://www.kaggle.com/learn/data-visualization)"
-license = {text = "CC-BY-SA-4.0"}
 readme = "README.md"
-authors = [
-    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
-]
-
-requires-python = ">=3.10,<3.13"
+requires-python = ">=3.12,<3.14"
 
 dependencies = [
     "pandas>=2.2.3,<3.0",
-    "numpy>=2.1.3,<3.0",
-    "seaborn>=0.13.2,<1.0",
+    "numpy>=2.2.2,<3.0",
+    "streamlit>=1.41.1,<2.0",
     "plotly>=5.24.1,<6.0",
+    "seaborn>=0.13.2,<1.0",
     "statsmodels>=0.14.4,<1.0",
-    "streamlit>=1.40.1,<2.0",
 ]
 
 [dependency-groups]
 dev = [
-    "jupyterlab>=4.3.0",
-    "ruff>=0.7.3"
+    "jupyterlab>=4.3.4",
+    "ruff>=0.9.2"
 ]
 
 [tool.ruff]
